adicao dos sobrenomes

--- a/docs/Base/1.3.MapaMental.md
+++ b/docs/Base/1.3.MapaMental.md
@@ -31,5 +31,5 @@ Colocar embed do miro aqui!!
 ## Histórico de Versões
 | Versão   | Descrição  | Responsável | Revisor    | Data      |
 |----------|------------|-------------|------------|-----------|
-| 1.0      | Criação da página   | [Geovanna](https://github.com/manuziny)   | [Matheus](https://github.com/mathonaut)      | 10/09/2023|
+| 1.0      | Criação da página   | [Geovanna Maciel](https://github.com/manuziny)   | [Matheus Henrique](https://github.com/mathonaut)      | 10/09/2023|
 
