--- a/docs/Base/1.4.RichPicture.md
+++ b/docs/Base/1.4.RichPicture.md
@@ -2,9 +2,12 @@
 
 ## Introdução
 
+O Rich Picture é uma ferramenta visual que tem sido amplamente utilizada em diversas áreas para representar de forma holística e abrangente uma situação complexa. Essa técnica ajuda a capturar a complexidade de sistemas, processos e problemas por meio de uma representação visual que inclui elementos gráficos, símbolos, texto e ilustrações.
 ## Participantes
 
 ## Rich Picture Idealizado
+### Versão 1
+![](\richPictureImagem\rp.jpg)
 
 ## Rich Picture Definido
 
@@ -12,3 +15,4 @@
 | Versão   | Descrição  | Responsável | Revisor    | Data      |
 |----------|------------|-------------|------------|-----------|
 | 1.0      | Criação da página   | [Geovanna Maciel](https://github.com/manuziny)   | [Débora Caires](https://github.com/deboracaires)      | 10/09/2023|
+| 1.1      | Adicionando primeira versão do rich picture   | [Hellen Fernanda](https://github.com/Hellen159)   | [Débora Caires](https://github.com/deboracaires)      | 11/09/2023|
