--- a/docs/Base/Planos_Risco_Custo_Tempo/1.1.xplano-tempo.md
+++ b/docs/Base/Planos_Risco_Custo_Tempo/1.1.xplano-tempo.md
@@ -17,6 +17,8 @@ O planejamento em ondas sucessivas (Rolling Wave Planning) é uma estratégia qu
 
 ![Figura Rolling Wave Planning](../../assets/RollingWavePlanning.png)
 
+<font style='text-align: center;'>Disponível em: https://urx1.com/2CISz</font>
+
 Nosso projeto adotará essa abordagem flexível, permitindo um início rápido com objetivos iniciais gerais. À medida que mais informações se tornem disponíveis, ajustaremos o planejamento para alocar recursos de forma eficaz e cumprir prazos.
 
 ### Atividades
