docs: adiciona metodologia e conclusão
Issue: #3 Diagrama Causa e Efeito.

--- a/docs/Base/1.1.3.causa-efeito.md
+++ b/docs/Base/1.1.3.causa-efeito.md
@@ -1,9 +1,12 @@
 ## Introdução
 
-O Diagrama de Causa e Efeito, ou de Ishikawa, é uma ferramenta desenvolvida por Kaoru Ishikawa que possui por finalidade a identificação das causas de um entrave. Para tal, utiliza-se de categorias básicas de causas, a depender da natureza do problema. Dado que a vicissitude em questão é de natureza operacional, os grupos básicos recomendados são: máquina, material, método, mão de obra, medida e instalações/ambiente [1](#referências-bibliográficas). 
+O Diagrama de Causa e Efeito, ou de Ishikawa, é uma ferramenta desenvolvida por Kaoru Ishikawa que possui por finalidade a identificação das causas de um entrave. Para tal, utiliza-se de categorias básicas de causas, a depender da natureza do problema [1](#referências-bibliográficas). Os grupos básicos recomendados para o tipo de entrave em questão, dado que se enquadra no padrão de serviços, são: local, procedimentos, pessoas e políticas [2](#referências-bibliográficas). 
 
 ## Metodologia 
 
+O entrave principal utilizado como efeito para a confecção do diagrama foi levantado pelo artefato de 5W2H, no qual foi analisado o problema de visualização das informações necessárias do produto. Além disso, os léxicos foram utilizados para compreender as relações do usuário e das ações envolvidas no processo de visualização de um produto.
+
+Portanto, visando à compreensão da vicissitude definida, os dois integrantes do grupo [Arthur de Melo](https://github.com/arthurmlv) e [Douglas Alves](https://github.com/dougalvs) levantaram diversas causas iniciais para tal efeito. A partir dessas causas, distribuiu-se cada uma em uma das quatro categorias de acordo com a característica da causa. Por fim, por meio das causas iniciais, ocorreu o desdobramento a fim de levantar causas mais específicas.
 
 ## Diagrama 
 
@@ -21,12 +24,19 @@ Figura 1 - Diagrama Causa-Efeito
 
 </center>
 
+## Conclusão
+
+Dado que grande parte da dificuldade para encontrar informações de uma mercadoria se dá ou pela disposição dos elementos na tela ou pela ausência das informações. Infere-se que existe uma necessidade de disponibilizar as informações antes das recomendações de produtos ou anúncios, além da manutenção de um padrão organizacional para essas informações por meio de uma tabela. Dado que, em alguns casos, as informações são postas em forma de texto, o que dificulta a leitura e a busca por um dado específico.
+
 ## Referências Bibliográficas
 
 > <a id="REF1" href="#anchor_1">1.</a> LINS, B. F. E. Ferramentas básicas da qualidade. Ciência da Informação, [S. l.], v. 22, n. 2, 1993. DOI: 10.18225/ci.inf.v22i2.502. Disponível em: https://revista.ibict.br/ciinf/article/view/502. Acesso em: 12 set. 2023.
+
+> <a id="REF2" href="#anchor_2">2.</a> Diagrama de Ishikawa (Ferramenta da Qualidade): Teoria + Exemplo Prático. Disponível em: <https://youtu.be/U-0qzmFqH-0>. Acesso em: 12 set. 2023.
 
 ## Histórico de Versões
 
 | Versão | Data       | Descrição                                    | Autor(es)                                        | Revisor(es)                                      |
 | ------ | ---------- | -------------------------------------------- | ------------------------------------------------ | ------------------------------------------------ |
 | `1.0`  | 12/09/2023 | Criação do diagrama.                           | [Arthur de Melo](https://github.com/arthurmlv) e [Douglas Alves](https://github.com/dougalvs) | [Sidney Fernando](https://github.com/nando3d3) |
+| `1.1`  | 12/09/2023 | Detalhamento da metodologia e conclusão.             | [Arthur de Melo](https://github.com/arthurmlv) | [Sidney Fernando](https://github.com/nando3d3) |
