adicao rp, mapa e referencias

--- a/docs/Base/1.4.RichPicture.md
+++ b/docs/Base/1.4.RichPicture.md
@@ -3,16 +3,37 @@
 ## Introdução
 
 O Rich Picture é uma ferramenta visual que tem sido amplamente utilizada em diversas áreas para representar de forma holística e abrangente uma situação complexa. Essa técnica ajuda a capturar a complexidade de sistemas, processos e problemas por meio de uma representação visual que inclui elementos gráficos, símbolos, texto e ilustrações.
+
 ## Participantes
 
+* [Débora Caires](https://github.com/deboracaires)
+* [Geovanna Maciel](https://github.com/manuziny)
+* [Hellen Fernanda](https://github.com/Hellen159)
+
 ## Rich Picture Idealizado
-### Versão 1
-![](\richPictureImagem\rp.jpg)
+
+### Versão 1 
+![](\richPictureImagem\rp.jpg) 
+<div style="text-align:center;">
+Autor: Hellen Fernanda
+</div>
+
+### Versão 2
+![](\richPictureImagem\rich_picture_geovanna.jpg)
+<div style="text-align:center;">
+Autor: Geovanna Maciel
+</div>
 
 ## Rich Picture Definido
+
+## Referências Biblgráficas
+> Introducing Rich Pictures - Rich Picture Drawing Guidelines. Disponível em: https://aprender3.unb.br/pluginfile.php/2523045/mod_resource/content/2/1_5145791542719414573.pdf. Acessado em: 13 de setembro de 2023.
+
+> 
 
 ## Histórico de Versões
 | Versão   | Descrição  | Responsável | Revisor    | Data      |
 |----------|------------|-------------|------------|-----------|
 | 1.0      | Criação da página   | [Geovanna Maciel](https://github.com/manuziny)   | [Débora Caires](https://github.com/deboracaires)      | 10/09/2023|
-| 1.1      | Adicionando primeira versão do rich picture   | [Hellen Fernanda](https://github.com/Hellen159)   | [Débora Caires](https://github.com/deboracaires)      | 11/09/2023|
+| 1.1      | Adicionando versão do rich picture   | [Hellen Fernanda](https://github.com/Hellen159)   | [Débora Caires](https://github.com/deboracaires)      | 11/09/2023|
+| 1.2      | Adicionando segunda versão do rich picture | [Geovanna Maciel](https://github.com/manuziny) | [Hellen Fernanda](https://github.com/Hellen159) | 13/09/2023 |
