--- a/docs/Base/1.3.MapaMental.md
+++ b/docs/Base/1.3.MapaMental.md
@@ -26,10 +26,14 @@ De forma geral, o mapa mental é uma ferramenta flexível que permite a toda a e
  * [Matheus Henrique](https://github.com/mathonaut) 
 
 ## Visualização no Miro
-Colocar embed do miro aqui!!
+<iframe width="768" height="432" src="https://miro.com/app/live-embed/uXjVMlLkH4M=/?moveToViewport=-3357,-1315,1028,1032&embedId=34743970085" frameborder="0" scrolling="no" allow="fullscreen; clipboard-read; clipboard-write" allowfullscreen></iframe>
+
+## Referências Bibliográficas
+> O que é um mapa mental e como fazer. Lucidchart. [https://www.lucidchart.com/pages/pt/o-que-e-mapa-mental-e-como-fazer](https://www.lucidchart.com/pages/pt/o-que-e-mapa-mental-e-como-fazer). Acesso em da: 11 de setembro de 2023.
 
 ## Histórico de Versões
 | Versão   | Descrição  | Responsável | Revisor    | Data      |
 |----------|------------|-------------|------------|-----------|
 | 1.0      | Criação da página   | [Geovanna Maciel](https://github.com/manuziny)   | [Matheus Henrique](https://github.com/mathonaut)      | 10/09/2023|
+| 1.1      | Adição do mapa mental | [Geovanna Maciel](https://github.com/manuziny) | [Matheus Henrique](https://github.com/mathonaut) | 13/09/2023
 
