adicao da metodologia do mapa mental
ainda n sei se vou deixar... pareceu meio solto no artefato.

--- a/docs/Base/1.3.MapaMental.md
+++ b/docs/Base/1.3.MapaMental.md
@@ -19,6 +19,9 @@ Para o projeto, o uso do mapa mental é importante para a análise dos diferente
 
 De forma geral, o mapa mental é uma ferramenta flexível que permite a toda a equipe a identificação e análise dos fluxos existentes, abrindo caminho para futuras melhorias nos processos.
 
+## Metodologia
+Para a relização do mapa mental, primiero foi definido um fluxo geral para posteriormente cada integrante dar opiniões e assim o mapa mental ir ganhando forma e corpo.
+
 ## Participantes
 
  * [Geovanna Maciel](https://github.com/manuziny) 
@@ -34,6 +37,6 @@ De forma geral, o mapa mental é uma ferramenta flexível que permite a toda a e
 ## Histórico de Versões
 | Versão   | Descrição  | Responsável | Revisor    | Data      |
 |----------|------------|-------------|------------|-----------|
-| 1.0      | Criação da página   | [Geovanna Maciel](https://github.com/manuziny)   | [Matheus Henrique](https://github.com/mathonaut)      | 10/09/2023|
-| 1.1      | Adição do mapa mental | [Geovanna Maciel](https://github.com/manuziny) | [Matheus Henrique](https://github.com/mathonaut) | 13/09/2023
+| 1.0      | Criação da página   | [Geovanna Maciel](https://github.com/manuziny)   | [Matheus Henrique](https://github.com/mathonaut)      | 10/09/2023 |
+| 1.1      | Adição do mapa mental | [Geovanna Maciel](https://github.com/manuziny) | [Matheus Henrique](https://github.com/mathonaut) | 13/09/2023 |
 
