docs: Ajusta integração do plano de risco e tempo.

--- a/docs/Base/1.1.1-plano-risco-temp.md
+++ b/docs/Base/1.1.1-plano-risco-temp.md
@@ -18,10 +18,12 @@ A tabela 1 a seguir apresenta a relação de cada participante com os artefatos 
 
 **Tabela 1** - Participantes da Criação do Plano.
 
-| Artefato            | Participante                                     |
-| ------------------- | ------------------------------------------------ |
-| [Página do Plano]() | [Matheus Henrique](https://github.com/mathonaut) |
-| []()                |                                                  |
+| Artefato                                                                | Participante                                                                                      |
+| ----------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------- |
+| [Página do Plano](#introdução)                                          | [Matheus Henrique](https://github.com/mathonaut)                                                  |
+| [Metodologia](#metodologia)                                             | [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3) |
+| [Matriz de Probabilidade e Impacto](#matriz-de-probabilidade-e-impacto) | [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3) |
+| [Riscos Elicitados](#riscos-elicitados)                                 | [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3) |
 
 _Fonte: Elaborada por [Matheus Henrique](https://github.com/mathonaut), 2023._
 
@@ -40,7 +42,7 @@ A produção foi realizada no período de 09 de setembro de 2023 até 13 de sete
 | 09/09/2023 | Criação da página.                      | [Matheus Henrique](https://github.com/mathonaut)                                                  |
 | 10/09/2023 | Criação do plano.                       | [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3) |
 | 11/09/2023 | Entrega da primeira versão do artefato. | [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3) |
-| 12/09/2023 | Verificação do artefato.                | Fulano e Ciclano                                                                                  |
+| 12/09/2023 | Verificação do artefato.                | [Arthur de Melo](https://github.com/arthurmlv) e [Douglas Alves](https://github.com/dougalvs)     |
 | 13/09/2023 | Correção do artefato.                   | [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3) |
 | 14/09/2023 | Entrega final do artefato.              | [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3) |
 
@@ -66,13 +68,11 @@ A elaboração deste plano seguirá uma versão adaptada dos procedimentos menci
 
 - **Monitorar os Riscos**: O processo de monitorar a implementação de planos acordados de resposta aos riscos, acompanhar riscos identificados, identificar e analisar novos riscos, e avaliar a eficácia do processo de risco ao longo do projeto.
 
-Na elaboração inicial deste plano, os procedimentos de implementação de respostas e monitoramento de riscos serão omitidos, uma vez que o foco está na identificação dos riscos associados à execução do projeto.
+Na elaboração inicial deste plano, os procedimentos de implementação de respostas e monitoramento de riscos serão omitidos, uma vez que o foco está na identificação dos riscos associados à execução do projeto. Além disso, os riscos são referentes a criação do aplicativo/site de e-commerce.
 
 ### Procedimentos
 
-Na identificação e análise qualitativa se foi utilizada uma estrutura analítica de risco (EAR), na qual os riscos foram categorizados.
-
-As categorias identificadas foram as seguintes:
+Na identificação e análise qualitativa se foi utilizada uma estrutura analítica de risco (EAR), na qual os riscos foram categorizados. As categorias identificadas foram as seguintes:
 
 #### Técnico
 
@@ -88,7 +88,8 @@ As categorias identificadas foram as seguintes:
 
 - Legislação/Regulamentação: Riscos associados com as leis que regem o mercado;
 - Fatores Pessoais: Riscos associados com fatores pessoais dos integrantes, como saúde;
-- Motivação: Riscos associados à relação dos integrantes da equipe com o projeto.
+- Cliente: Riscos associados ao cliente.
+- Mercado: Riscos associados ao cenário de competição com a concorrência.
 
 #### Organizacional
 
@@ -102,7 +103,7 @@ As categorias identificadas foram as seguintes:
 - Planejamento: Risco associado ao planejamento do projeto;
 - Comunicação: Riscos associados à comunicação entre as partes envolvidas.
 
-#### Matriz de Probabilidade e Impacto
+### Matriz de Probabilidade e Impacto
 
 A análise quantitativa foi realizada utilizando uma matriz de impacto, na qual seus valores foram utilizados para priorizar os riscos. As definições para os valores de probabilidade e impactos são apresentados nas tabelas 3 e 4.
 
@@ -146,13 +147,13 @@ Para a contrução da matriz foi utilizado os limites superiores para cada inter
 
 **Tabela 5** - Matriz de Probabilidade e Impacto.
 
-| Probabilidade/Impacto | Muito Alto | Alto | Médio | Baixo | Muito Baixo |
-| --------------------- | ---------- | ---- | ----- | ----- | ----------- |
-| Muito Alta            | 0.72       | 0.36 | 0.18  | 0.09  | 0.05        |
-| Alta                  | 0.56       | 0.28 | 0.14  | 0.07  | 0.04        |
-| Média                 | 0.40       | 0.20 | 0.10  | 0.05  | 0.03        |
-| Baixa                 | 0.24       | 0.12 | 0.06  | 0.03  | 0.02        |
-| Muito Baixa           | 0.08       | 0.04 | 0.02  | 0.01  | 0.01        |
+| Probabilidade/Impacto | Muito Alto                               | Alto                                      | Médio                                    | Baixo                                    | Muito Baixo                              |
+| --------------------- | ---------------------------------------- | ----------------------------------------- | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- |
+| Muito Alta            | <span style="color:red">0.72 </span>     | <span style="color:red">0.36</span>       | <span style="color:#ff9d3f">0.18</span>  | <span style="color:#ff9d3f">0.09 </span> | <span style="color:#2e9500">0.05 </span> |
+| Alta                  | <span style="color:red">0.56 </sapn>     | <span style="color:red">0.28</span>       | <span style="color:#ff9d3f">0.14 </span> | <span style="color:#2e9500">0.07 </span> | <span style="color:#2e9500">0.04 </span> |
+| Média                 | <span style="color:red">0.40 </span>     | <span style="color:#ff9d3f">0.20 </span>  | <span style="color:#ff9d3f">0.10 </span> | <span style="color:#2e9500">0.05 </span> | <span style="color:#2e9500">0.03 </span> |
+| Baixa                 | <span style="color:red">0.24</span>      | <span style="color:#ff9d3f">0.12 </span>  | <span style="color:#2e9500">0.06 </span> | <span style="color:#2e9500"> 0.03</span> | <span style="color:#2e9500">0.02</span>  |
+| Muito Baixa           | <span style="color:#2e9500">0.08 </span> | <span style="color:#2e9500"> 0.04 </span> | <span style="color:#2e9500">0.02 </span> | <span style="color:#2e9500">0.01 </span> | <span style="color:#2e9500">0.01 </span> |
 
 _Fonte: Elaborada por [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3), 2023._
 
@@ -168,16 +169,29 @@ São apresentados na tabela 6 os riscos elicitados com suas respectivas ações 
 
 **Tabela 6** - Matriz de Probabilidade e Impacto.
 
-| ID                           | Risco                                                     | Impacto    | Probabilidade | Prevenção                                                     | Resposta                           | Prioridade |
-| ---------------------------- | --------------------------------------------------------- | ---------- | ------------- | ------------------------------------------------------------- | ---------------------------------- | ---------- |
-| **Técnico**                  |                                                           |            |               |                                                               |                                    |            |
-| R01                          | Escopo que não esteja alinhado com o objetivo do produto. | Médio      | Muito Baixa   | Verificar as diretrizes de entrega e escopo do grupo.         | Eliminar trabalhos fora do escopo. |            |
-| R02                          | A infraestrutura definida não está atende o projeto.      | Muito Alto | Alta          | Avaliação das capacidades/custos da infraestrutura escolhida. | Modificar a infraestrutura.        |            |
-| R03                          | Uso de tecnologias que não satisfazem as necessidades.    | Alto       | Baixa         | Avaliação das capcidades da tecnologia utilizada.             | Refatorações.                      |            |
-| R04                          | Falta de conformidade com os padrões de qualidade.        | Alto       | Média         | Avaliação das capcidades da tecnologia utilizada.             | Refatorações.                      |            |
-| **Externo**                  |                                                           |            |               |                                                               |                                    |            |
-| **Organizacional**           |                                                           |            |               |                                                               |                                    |            |
-| **Gerenciamento de Projeto** |                                                           |            |               |                                                               |                                    |            |
+| ID                           | Risco                                                                         | Impacto    | Probabilidade | Prevenção                                                                  | Resposta                                                      | Prioridade                                |
+| ---------------------------- | ----------------------------------------------------------------------------- | ---------- | ------------- | -------------------------------------------------------------------------- | ------------------------------------------------------------- | ----------------------------------------- |
+| **Técnico**                  |                                                                               |            |               |                                                                            |                                                               |                                           |
+| R01                          | A infraestrutura não atende as necessidades do projeto.                       | Muito Alto | Alta          | Avaliação das capacidades/custos da infraestrutura escolhida.              | Modificar a infraestrutura.                                   | <span style="color:red">0.56 </sapn>      |
+| R02                          | Uso de tecnologias que não satisfazem as necessidades.                        | Alto       | Baixa         | Avaliação das capcidades da tecnologia utilizada.                          | Refatorações.                                                 | <span style="color:#ff9d3f">0.12 </span>  |
+| R03                          | Falta de conformidade com os padrões de qualidade.                            | Alto       | Média         | Verificação se o produto está de acordo com os padrões de qualidade.       | Refatorações.                                                 | <span style="color:#ff9d3f">0.20 </span>  |
+| R04                          | Estabelecer um escopo que não esteja alinhado com as necessidades do produto. | Alto       | Baixa         | Manter uma comunicação efetiva com as partes interessadas.                 | Alterar o escopo.                                             | <span style="color:#ff9d3f">0.12 </span>  |
+| R05                          | Elicitar requisitos que não solucionam plenamente os problemas.               | Médio      | Média         | Validar os requisitos elicitados.                                          | Alterar os requisitos e revalidar-os.                         | <span style="color:#ff9d3f">0.10 </span>  |
+| R06                          | A arquitetura escolhida não satisfaz as necessidades do projeto.              | Muito Alto | Baixa         | Análise detalhada da arquitetura que será utilizada.                       | Modificar a arquitetura, tentando manter o trabalho já feito. | <span style="color:red">0.24</span>       |
+| **Externo**                  |                                                                               |            |               |                                                                            |                                                               |                                           |
+| R07                          | Afastamento de integrantes por motivos de saúde.                              | Baixo      | Média         | Promoção de ambiente de trabalho agradável.                                | Ajuste na distribuição das tarefas do time.                   | <span style="color:#2e9500">0.05 </span>  |
+| R08                          | Falta de cooperação do cliente.                                               | Alto       | Muito Baixa   | Manter-se sempre prestativo e atento às demandas do cliente.               | Demonstra que o time está ali para ajudar.                    | <span style="color:#2e9500"> 0.04 </span> |
+| R09                          | Mudança em leis que alterem o modo como o produto funciona.                   | Muito Alto | Média         | Acompanhar as discussões sobre o setor.                                    | Alterar o funcionamento da aplicação.                         | <span style="color:red">0.40 </span>      |
+| R10                          | Market share da concorrência aumentou significantemente.                      | Alto       | Média         | Acompanhar as tendências de mercado.                                       | Modificar a aplicação para se diferenciar.                    | <span style="color:#ff9d3f">0.20 </span>  |
+| **Organizacional**           |                                                                               |            |               |                                                                            |                                                               |                                           |
+| R11                          | Priorização inadequada das tarefas.                                           | Muito Alto | Média         | Compreender as necessidades dos clientes.                                  | Repriorizar as tarefas.                                       | <span style="color:red">0.40 </span>      |
+| R12                          | Dificuldade do time com as tecnologias adotadas.                              | Médio      | Baixa         | Avaliar a familiaridade do time com as tecnologias e treinamento.          | Mudança de tecnologia.                                        | <span style="color:#2e9500">0.06 </span>  |
+| R13                          | Delegar tarefa para um membro sem a habilidade necessária.                    | Médio      | Média         | Compreender as habilidades dos integrantes.                                | Alterar o responsável pela tarefa.                            | <span style="color:#2e9500">0.06 </span>  |
+| R13                          | Falta de recurso humanos/materias.                                            | Alta       | Baixa         | Certificar-se se os recursos são suficientes para a realização do projeto. | Alocar mais recursos.                                         | <span style="color:#ff9d3f">0.12 </span>  |
+| **Gerenciamento de Projeto** |                                                                               |            |               |                                                                            |                                                               |                                           |
+| R14                          | Comunicação falha entre os membros da equipe ou com o cliente.                | Alta       | Baixa         | Criar um plano de comunicação.                                             | Manter um canal de comunicação efetivo com os envolvidos.     | <span style="color:#ff9d3f">0.12 </span>  |
+| R14                          | Planejamento falho.                                                           | Alto       | Médio         | Analisar os processos e fluxos de trabalho necessários.                    | Replanejamento.                                               | <span style="color:#ff9d3f">0.20 </span>  |
+| R14                          | O projeto não atinge as estimativas.                                          | Médio      | Médio         | Definir as estimativas de acordo com a capacidade da equipe.               | Ajuste nas estimativas tentando manter as datas de entregas.  | <span style="color:#ff9d3f">0.10 </span>  |
 
 _Fonte: Elaborada por [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3), 2023._
 
@@ -191,7 +205,12 @@ Esta página é um guia para a gestão eficiente do tempo, abrangendo estratégi
 
 ## Disponibilidade
 
+A tabela 7 a seguir apresenta a disponibilidade dos membros da equipe.
+
+<center>
+
 **Tabela 7** - Diponibilidade de cada memebro.
+
 <div>
 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQhjfSf_VjGWHEMpdYINRaRrQD0LcXnXMFsbwrBdIooLjM7BllbLj3VYCQElRJMSYjBVSk0YtzyVkyh/pubhtml?widget=true&amp;headers=false" style="height: 350px;"></iframe>
 
@@ -199,13 +218,21 @@ Esta página é um guia para a gestão eficiente do tempo, abrangendo estratégi
 
 _Fonte: Elaborada por [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3), 2023._
 
+</center>
+
 ## Planejamento de atividades
 
-O planejamento em ondas sucessivas (Rolling Wave Planning) é uma estratégia que fragmenta o planejamento de um projeto em fases à medida que o trabalho avança e os detalhes se tornam mais claros. Inicialmente, as atividades de curto prazo e os objetivos do projeto são definidos com base em informações mais genéricas, tornando possível um início rápido. Conforme o projeto progride, as incertezas e riscos iniciais se tornam mais específicos, permitindo refinamentos no planejamento. Essa abordagem é especialmente valiosa em situações com prazos rigorosos, onde um planejamento mais detalhado resultaria em atrasos indesejados. Ela se alinha com as melhores práticas do PMBOK, promovendo uma gestão adaptativa de projetos, flexível e eficaz. É possível visualizar a explicação na imagem abaixo:
+O planejamento em ondas sucessivas (Rolling Wave Planning) é uma estratégia que fragmenta o planejamento de um projeto em fases à medida que o trabalho avança e os detalhes se tornam mais claros. Inicialmente, as atividades de curto prazo e os objetivos do projeto são definidos com base em informações mais genéricas, tornando possível um início rápido. Conforme o projeto progride, as incertezas e riscos iniciais se tornam mais específicos, permitindo refinamentos no planejamento. Essa abordagem é especialmente valiosa em situações com prazos rigorosos, onde um planejamento mais detalhado resultaria em atrasos indesejados. Ela se alinha com as melhores práticas do PMBOK, promovendo uma gestão adaptativa de projetos, flexível e eficaz. É possível visualizar a explicação na figura 1 a seguir.
+
+<center>
+
+**Figura 1** - Demonstração dos estágios do Rolling Wave Planning
 
 ![Figura Rolling Wave Planning](../../assets/RollingWavePlanning.png)
 
 <font style='text-align: center;'>Disponível em: https://urx1.com/2CISz</font>
+
+</center>
 
 Nosso projeto adotará essa abordagem flexível, permitindo um início rápido com objetivos iniciais gerais. À medida que mais informações se tornem disponíveis, ajustaremos o planejamento para alocar recursos de forma eficaz e cumprir prazos.
 
@@ -222,7 +249,10 @@ As atividades serão divididas por entregas. Os atributos das atividades incluem
 
 #### Entrega 1: DSW (Base)
 
+<center>
+
 **Tabela 8** - Atributos das atividades por entrega
+
 <!-- | ID  | Tarefa                                  | Responsável                    | Inicial    | Estimativa (h) |
 |-----|-----------------------------------------|--------------------------------|------------|-----------------|
 | 001 | Design Sprint                           | Douglas                        | 09/09/2023 | 5               |
@@ -239,6 +269,8 @@ As atividades serão divididas por entregas. Os atributos das atividades incluem
 
 _Fonte: Elaborada por [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3), 2023._
 
+</center>
+
 ## Referências Bibliográficas
 
 > <a id='ref1'>[1.](#anchor1)</a> Um Guia do Conhecimento em Gerenciamento de Projetos (Guia PMBOK®). Pensilvânia: Project Management Institute, 2017
@@ -249,9 +281,9 @@ _Fonte: Elaborada por [Matheus Henrique](https://github.com/mathonaut) e [Sidney
 
 ## Histórico de Versões
 
-| Versão | Data       | Descrição                                                                | Autor(es)                                                                                         | Revisor(es)                                    |
-| ------ | ---------- | ------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------- | ---------------------------------------------- |
-| `1.0`  | 09/09/2023 | Criação da página.                                                       | [Matheus Henrique](https://github.com/mathonaut)                                                  | [Sidney Fernando](https://github.com/nando3d3) |
-| `1.1`  | 10/09/2023 | Adição de introdução, objetivo, participantes, cronograma e metodologia. | [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3) | [Sidney Fernando](https://github.com/nando3d3) |
-| `1.2` | 12/09/2023 | Finalização do artefato e correção dos primeiros erros. | [Matheus Henrique](https://github.com/mathonaut) | [Sidney Fernando](https://github.com/nando3d3) |
-| `1.3`  | 13/09/2023 | Plano de Tempo                                                       | [Sidney Fernando](https://github.com/nando3d3)                                                  |  [Matheus Henrique](https://github.com/mathonaut)|
+| Versão | Data       | Descrição                                                                | Autor(es)                                                                                         | Revisor(es)                                      |
+| ------ | ---------- | ------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------- | ------------------------------------------------ |
+| `1.0`  | 09/09/2023 | Criação da página.                                                       | [Matheus Henrique](https://github.com/mathonaut)                                                  | [Sidney Fernando](https://github.com/nando3d3)   |
+| `1.1`  | 10/09/2023 | Adição de introdução, objetivo, participantes, cronograma e metodologia. | [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3) | [Sidney Fernando](https://github.com/nando3d3)   |
+| `1.2`  | 12/09/2023 | Finalização do artefato e correção dos primeiros erros.                  | [Matheus Henrique](https://github.com/mathonaut)                                                  | [Sidney Fernando](https://github.com/nando3d3)   |
+| `1.3`  | 13/09/2023 | Adição do Plano de Tempo                                                 | [Sidney Fernando](https://github.com/nando3d3)                                                    | [Matheus Henrique](https://github.com/mathonaut) |
