feat: adiciona introdução da metologia utilizada e explicação sobre o scrum

--- a/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
+++ b/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
@@ -1,11 +1,17 @@
 # 1.2. Módulo Processos/Metodologias/Abordagens
 
-Foco_2: Metodologia (Modelagem BPMN & Escolhas Metodológicas)
+# Metodologia Adotada
 
-Entrega Mínima: Modelagem BPMN, evidenciando algumas escolhas metodológicas utilizadas pela equipe nessa primeira entrega.
+Conforme destacado por Sommerville (2018)¹, o projeto de arquitetura desempenha um papel fundamental no desenvolvimento de software, atuando como o estágio inicial do processo. Nesse estágio são identificados os principais componentes estruturais do sistema e seus relacionamentos, resultando em um modelo de arquitetura que descreve como o sistema será organizado.
 
-Apresentação (em sala) explicando o detalhamento metodológico desenhado, com: (i) rastro claro aos membros participantes (MOSTRAR QUADRO DE PARTICIPAÇÕES & COMMITS); (ii) justificativas & senso crítico sobre as escolhas metodológicas adotadas para o projeto; (iii) breve apresentação da modelagem em BPMN, e (iv) comentários gerais sobre o trabalho em equipe. Tempo da Apresentação: +/- 10min. Recomendação: Apresentar diretamente via Wiki ou GitPages do Projeto.
+A escolha metodológica nesse contexto é um fator crucial, pois influencia diretamente na forma como a arquitetura será projetada e implementada, podendo impactar significativamente na qualidade e no sucesso do projeto de software. Dessa forma, no seguinte projeto, serão adotados elementos das seguintes ferramentas e metodologias: Scrum, XP (Extreme Programming), BPMN (Business Process Model and Notation) e Conventional Commits.
 
-A Wiki ou GitPages do Projeto deve conter um tópico dedicado ao Módulo Processos/Metodologias/Abordagens, com modelagem BPMN, histórico de versões, referências, e demais detalhamentos gerados pela equipe nesse escopo.
+# Scrum
 
-Demais orientações disponíveis nas Diretrizes (vide Moodle).
+O Scrum, segundo Fábio Cruz (2013)², é um _framework_ amplamente utilizado no gerenciamento de projetos ágeis. Embora frequentemente associado ao desenvolvimento de software, sua flexibilidade o torna applicável a qualquer tipo de produto. Uma de suas características distintivas é sua abordagem iterativa e incremental. No âmbito do Scrum, os projetos são divididos em ciclos curtos e repetitivos, conhecidos como "Sprints". As sprints, que geralmente possuem uma duração de duas a quatro semanas, possibilitam a adaptação e correção de desvios a cada iteração.
+
+Conforme Fábio Cruz (2013)², as sprints são compostas por cerimônias do Scrum e incluem: A Sprint Planning, na qual são definidas as metas e tarefas da sprint. A Sprint Backlog, que registra as tarefas específicas a serem executadas na sprint atual. A Sprint Review, que verifica se os artefatos realizados estão satisfatórios. A Sprint Retrospective, que acontece após a revisão e permite a equipe analisar o que funcionou bem e o que pode ser melhorado. E finalmente, a Daily Scrum, que é uma reunião curta e diária para compartilhar o progresso da sprint.
+
+No projeto em questão, optou-se por uma abordagem adptada do Scrum, adotando os seguintes elementos: Sprint Planning, Sprint Backlog e Sprint Review. Para mais detalhes sobre como essas cerimônias foram alocadas no decorrer da sprint, acessar o artefato [BPMN (Business Process Model and Notation)]().
+
+# XP (Extreme Programming)
